Fixed positioning of beta testing badge on small screens

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -141,7 +141,7 @@ INFO VIEWS (About, Tutorial, ...)
 
 .info-content {
   font-size: $font-size-md;
-  margin: 2rem 5% 4rem;
+  margin: 4rem 5% 4rem;
   max-width: 1095px;
 
   h2, h3 {
